--- a/Desarrollo.ipynb
+++ b/Desarrollo.ipynb
@@ -88,36 +88,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tabulate'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-33d51cb43a32>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mtabulate\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtabulate\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Contribuciones'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Firma'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'Investigación previa'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'AM - Alejandro Medina Uicab'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'FC - Federico Clavijo López'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'Redacción de las respuestas'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'AM - Alejandro Medina Uicab'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'FC - Federico Clavijo López'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'Desarrollo del código'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'AM - Alejandro Medina Uicab'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'FC - Federico Clavijo López'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtabulate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tabulate'"
-     ]
-    }
-   ],
    "source": [
-    "from tabulate import tabulate\n",
     "\n",
-    "a = [['Contribuciones', 'Firma'], ['Investigación previa', 'AM - Alejandro Medina Uicab', 'FC - Federico Clavijo López'], ['Redacción de las respuestas', 'AM - Alejandro Medina Uicab', 'FC - Federico Clavijo López'], ['Desarrollo del código', 'AM - Alejandro Medina Uicab', 'FC - Federico Clavijo López']]\n",
-    "print(tabulate(a))\n",
-    "\n"
+    "| Contribuciones | Firma |\n",
+    "| --- | --- |\n",
+    "| Investigación previa | AM - Alejandro Medina Uicab y FC - Federico Clavijo López |\n",
+    "| Redacción de las respuestas | AM - Alejandro Medina Uicab y FC - Federico Clavijo López |\n",
+    "| Desarrollo del código | AM - Alejandro Medina Uicab y FC - Federico Clavijo López |\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
